--- a/Homepage.html
+++ b/Homepage.html
@@ -45,89 +45,8 @@
 </head>
 <body>
 
-<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
-<div class="container-fluid Header " >
-    <div class="row">
-        <div class="col-lg-1 hiddenMedium ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
-        </div>
-        <div class="col-lg-6 hiddenMedium ">
-            <p class="title">ANIMATION & GAME DESIGN CLUB</p>
-        </div>
-        <div class="col-lg-4 hiddenMedium">
-            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
-            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
-            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
-            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
-        </div>
-        <div class="col-lg-1 hiddenMedium ">
-            <a href="https://www.kent.edu/"><img class="LogoBoxRight" src="Images/1200px-Kent_State_seal.svg%20(1).png"></a>
-        </div>
-        <div class="col-4 showMedium ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
-        </div>
-        <div class="col-8 showMedium">
-            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
-            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
-            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
-            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
-        </div>
 
-        <div class="col-4 showSmall ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
-        </div>
-        <div class="col-8 showSmall">
-            <div class="container m-0 p-0">
-                <div class="row m-0 p-0">
-                    <div class="col-12 m-0 p-0">
-                        <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
-                        <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
-                    </div>
-                    <div class="col-12 m-0 p-0">
-                        <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
-                        <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="d-flex stay  navbarBack ">
-    <a class=" navColor" href="Homepage.html" style="text-decoration: none;">Home</a>
-    <a class=" navColor" href="EventsPage.html " style="text-decoration: none;">Events</a>
-    <a class=" navColor" href="ProjectsPage.html" style="text-decoration: none;">Projects</a>
-    <a class=" navColor" href="ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
-    <a class=" navColor flex-grow-1" href="ContactUs.html " style="text-decoration: none;">Contact Us</a>
-
-    <div class="container-fluid showSmall mobileNavBack m-0 p-0">
-        <div class="row m-0 p-0">
-            <div class="col-12 m-0 p-0">
-                <div class="dropdown mobileNav container">
-                    <div class="row">
-                        <div class="col-6">
-                            <button type="button" class=" mobileNavButton dropdown-toggle" data-toggle="dropdown">
-                               <i  class="fas fa-bars"></i>
-                            </button>
-                            <div class="dropdown-menu dropdownNav">
-                                <a class="dropdown-item itemNav" href="EventsPage.html">Events</a>
-                                <a class="dropdown-item itemNav" href="ProjectsPage.html">Projects</a>
-                                <a class="dropdown-item itemNav" href="ConstitutionPage.html">Constitution</a>
-                                <a class="dropdown-item itemNav" href="ContactUs.html">Contact Us</a>
-                            </div>
-                        </div>
-                        <div class="col-6 ">
-                           <a style="text-decoration: none;" href="Homepage.html"><i class="fa fa-home homeIcon"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
+<div id="Header"></div>
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
 <div class="container-fluid background-box">
@@ -173,20 +92,18 @@
 </div>
 
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
-<div class="container-fluid footer">
-    <div class="row">
-        <div class="col-12">
-            <div class="container footerBox">
-                <div class="row">
-                    <div class="col-12 text-center footertext">
-                        <span><a class="footertext" style="text-decoration: none;" href="ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="ContactUs.html">Contact Us</a></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+<div id="Footer"></div>
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
+
+
+<script src="js/Header.js"></script>
+<script src="js/Footer.js"></script>
+<script>
+    // codeBlock  = '<div>Hello World!!!</div>';
+    document.getElementById("Header").innerHTML = HeaderBlock;
+    document.getElementById("Footer").innerHTML = FooterBlock;
+</script>
 <button class="topButton" onclick="topFunction()" class="topButton" id="myBtn" title="Go to top">Back to Top</button>
 <script>
     // When the user scrolls down 20px from the top of the document, show the button
