--- a/ContactUs.html
+++ b/ContactUs.html
@@ -76,6 +76,39 @@
 <body>
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <div id="Header"></div>
+<div class="d-flex stay  navbarBack ">
+    <a class=" navColor" href="Homepage.html" style="text-decoration: none;">Home</a>
+    <a class=" navColor" href="EventsPage.html " style="text-decoration: none;">Events</a>
+    <a class=" navColor" href="ProjectsPage.html" style="text-decoration: none;">Projects</a>
+    <a class=" navColor" href="ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
+    <a class=" navColor flex-grow-1" href="ContactUs.html " style="text-decoration: none;">Contact Us</a>
+
+    <div class="container-fluid showSmall mobileNavBack m-0 p-0">
+        <div class="row m-0 p-0">
+            <div class="col-12 m-0 p-0">
+                <div class="dropdown mobileNav container">
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="button" class=" mobileNavButton dropdown-toggle" data-toggle="dropdown">
+                                <i  class="fas fa-bars"></i>
+                            </button>
+                            <div class="dropdown-menu dropdownNav">
+                                <a class="dropdown-item itemNav" href="EventsPage.html">Events</a>
+                                <a class="dropdown-item itemNav" href="ProjectsPage.html">Projects</a>
+                                <a class="dropdown-item itemNav" href="ConstitutionPage.html">Constitution</a>
+                                <a class="dropdown-item itemNav" href="ContactUs.html">Contact Us</a>
+                            </div>
+                        </div>
+                        <div class="col-6 ">
+                            <a style="text-decoration: none;" href="Homepage.html"><i class="fa fa-home homeIcon"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
 
@@ -86,7 +119,7 @@
 <div id="Footer"></div>
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <script src="js/Contacts.js"></script>
-<script src="js/Header.js"></script>
+<script src="js/Header1.js"></script>
 <script src="js/Footer.js"></script>
 <script>
     // codeBlock  = '<div>Hello World!!!</div>';
